Update landing.html content

--- a/landing.html
+++ b/landing.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>Welcome to the Minerals Repository</h1>
-    <button onclick="location.href='browse.html'">Browse</button>
-    <button onclick="location.href='view.html'">View</button>
+    <button onclick="location.href='Browse.html'">Browse</button>
+    <button onclick="location.href='Add New.html'">New</button>
 </body>
 </html>
