Revise index.html for Mineral Inventory layout
Updated the HTML structure for the Mineral Inventory page, including meta tags and header content.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Landing Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mineral Inventory</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+    <header class="header">
+        <h1>Mineral Inventory</h1>
+        <p>Discover and manage your mineral collection</p>
+    </header>
 <body>
     <h1>Welcome to the Minerals Repository</h1>
     <button onclick="location.href='Browse.html'">Browse</button>
