Add button to navigate to Browse.html

--- a/Add New.html
+++ b/Add New.html
@@ -79,6 +79,7 @@
     </style>
 </head>
 <body>
+    <button onclick="location.href='Browse.html'">Browse</button>
     <div class="form-container">
         <h1>Add New Mineral</h1>
         
