--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <h2>Welcome to the Minerals Repository</h2>
         <div class="button-container">
             <button class="btn" onclick="location.href='Browse.html'">Browse</button>
+        </div>
+        <div class="button-container">
             <label for="photoUpload">Step 1: Upload Photo of Mineral *</label>
             <input type="file" id="photoUpload" name="photoUpload" accept="image/*" required>
-            <img id="photoPreview" style="display: none;">
+            <img id="photoPreview" style="btn: none;">
         </div>
 
         <form id="mineralForm" onsubmit="handleSubmit(event)">
