--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>Welcome to the Minerals Repository</h2>
         <div class="button-container">
             <button class="btn" onclick="location.href='Browse.html'">Browse</button>
+            <button onclick="location.href='add new.html'">Add New</button>
         </div>
      </main>
 </body>
