--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Mineral Inventory</h1>
+        <h1>Welcome to the SGS Mineral Inventory</h1>
         <p>Discover and manage your mineral collection</p>
     </header>
     <main>
-        <h2>Welcome to the Minerals Repository</h2>
+        <h2>What would you like to do?</h2>
         <div class="button-container">
             <button class="btn" onclick="location.href='Browse.html'">Browse</button>
-            <button onclick="location.href='add new.html'">Add New</button>
+            <button class="btn" onclick="location.href='add new.html'">Add New</button>
         </div>
      </main>
 </body>
