--- a/add new.html
+++ b/add new.html
@@ -90,7 +90,7 @@
 
         <form id="mineralForm" onsubmit="handleSubmit(event)">
             <div class="details-section" id="detailsSection">
-                <h2>Step 2: Enter Mineral Details</h2>
+                <h2>Step 2: Enter Details</h2>
                 
                 <label for="mineralName">Mineral Name *</label>
                 <input type="text" id="mineralName" name="mineralName" required>
