--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <h2>What would you like to do?</h2>
         <div class="button-container">
             <button class="btn" onclick="location.href='Browse.html'">Browse</button>
-            <button class="btn" onclick="location.href='add new.html'">Add New</button>
+        </div>
+        <div class="button-container">
+            <button class="btn" onclick="location.href='charts.html'">Add New</button>
         </div>
      </main>
 </body>
