--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button class="btn" onclick="location.href='Browse.html'">Browse</button>
         </div>
         <div class="button-container">
-            <button class="btn" onclick="location.href='charts.html'">Add New</button>
+            <button class="btn" onclick="location.href='add new.html'">Add New</button>
         </div>
      </main>
 </body>
