--- a/Browse.html
+++ b/Browse.html
@@ -13,9 +13,9 @@
     </header>
     
     <nav class="nav">
-        <a href="#home">Home</a>
+        <a href="#index">Home</a>
         <a href="#collection">Collection</a>
-        <a href="#about">About</a>
+        <a href="#add new">Upload</a>
     </nav>
     
     <main>
