--- a/Browse.html
+++ b/Browse.html
@@ -13,9 +13,9 @@
     </header>
     
     <nav class="nav">
-        <a href="#index">Home</a>
+        <a href="https://kimberlyhansen.github.io/Minerals/#home">Home</a>
         <a href="#collection">Collection</a>
-        <a href="#add new">Upload</a>
+        <a href="https://kimberlyhansen.github.io/Minerals/add%20new.html">Upload</a>
     </nav>
     
     <main>
